--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@angular/service-worker": "~7.2.0",
     "@ngrx/effects": "^7.3.0",
     "@ngrx/store": "^7.3.0",
+    "body-parser": "^1.18.3",
     "core-js": "^3.0.0",
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
+    "mongodb": "^3.2.2",
     "path": "^0.12.7",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
+    "web-push": "^3.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -42,7 +45,6 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "body-parser": "^1.18.3",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -51,12 +53,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "mongodb": "^3.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2",
-    "web-push": "^3.3.3"
+    "typescript": "~3.2.2"
   },
   "heroku-run-build-script": true
 }
