--- a/angular.json
+++ b/angular.json
@@ -66,7 +66,10 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ramstein-conference-app:build"
+            "browserTarget": "ramstein-conference-app:build",
+            "ssl": true,
+            "sslKey": "/node_modules/browser-sync/lib/server/certs/server.key",
+            "sslCert": "/node_modules/browser-sync/lib/server/certs/server.crt"
           },
           "configurations": {
             "production": {
