--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@angular/pwa": "^0.12.4",
     "@angular/router": "~7.2.0",
     "@angular/service-worker": "~7.2.0",
+    "@asymmetrik/ngx-leaflet": "^5.0.2",
     "body-parser": "^1.18.3",
     "core-js": "^3.0.0",
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
+    "leaflet": "^1.5.1",
     "mongodb": "^3.2.2",
     "path": "^0.12.7",
     "rxjs": "^6.3.3",
@@ -42,6 +44,7 @@
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/leaflet": "^1.4.4",
     "@types/node": "~8.9.4",
     "browser-sync": "^2.26.5",
     "codelyzer": "~4.5.0",
