--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/router": "~7.2.0",
     "@angular/service-worker": "~7.2.0",
     "@asymmetrik/ngx-leaflet": "^5.0.2",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "body-parser": "^1.18.3",
     "core-js": "^3.0.0",
     "express": "^4.16.4",
