--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
   },
-  "heroku-run-build-script": true
+  "heroku-run-build-script": true,
+  "engines": {
+    "node": "10.x"
+  }
 }
