--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hammerjs": "^2.0.8",
     "leaflet": "^1.5.1",
     "mongodb": "^3.2.2",
+    "ngx-markdown": "^7.1.5",
     "path": "^0.12.7",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
