--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -19,7 +19,7 @@
       "resources": {
         "files": [
           "/assets/**",
-          "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
+          "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani|md)"
         ]
       }
     }
