--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
     "core-js": "^3.0.0",
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
+    "imagesloaded": "^4.1.4",
     "leaflet": "^1.5.1",
+    "masonry": "^0.0.2",
+    "masonry-layout": "^4.2.2",
     "mongodb": "^3.2.2",
+    "ng-masonry-grid": "^1.3.0",
     "ngx-markdown": "^7.1.5",
     "path": "^0.12.7",
     "rxjs": "^6.3.3",
