--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^1.18.3",
     "core-js": "^3.0.0",
     "express": "^4.16.4",
+    "express-sslify": "^1.2.0",
     "hammerjs": "^2.0.8",
     "imagesloaded": "^4.1.4",
     "leaflet": "^1.5.1",
